--- a/packages/collection/tsconfig.json
+++ b/packages/collection/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "lib": ["ES2019"],
+    "module": "commonjs",
+    "target": "ES2019",
     "outDir": "."
   },
   "files": ["index.ts"]
