--- a/packages/collection/package.json
+++ b/packages/collection/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "jest"
