--- a/packages/react-ui/package.json
+++ b/packages/react-ui/package.json
@@ -7,6 +7,10 @@
     "dev": "NODE_ENV=development webpack-dev-server --config ./webpack.config.ts",
     "build": "NODE_ENV=development webpack --config ./webpack.config.ts"
   },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "dependencies": {
     "@path-tree/collection": "1.0.0"
   },
@@ -16,14 +20,15 @@
     "@types/clean-webpack-plugin": "^0.1.3",
     "@types/gh-pages": "^3.0.0",
     "@types/html-webpack-plugin": "^3.2.3",
+    "@types/marked": "^1.1.0",
     "@types/mini-css-extract-plugin": "^0.9.1",
-    "@types/react": "^16.9.41",
+    "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/resolve-pkg": "^2.0.0",
     "@types/webpack": "4.41.18",
     "@types/webpack-dev-server": "3.11.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
-    "@types/marked": "^1.1.0",
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -47,8 +52,11 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-svg-loader": "^3.0.3",
     "regenerator-runtime": "^0.13.5",
+    "resolve-pkg": "^2.0.0",
     "styled-components": "^5.1.1",
     "terser-webpack-plugin": "^3.0.6",
     "ts-jest": "^26.1.1",
