feat: rename react-ui -> react

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@path-tree/react-ui",
+  "name": "@path-tree/react",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
