--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,17 +1,20 @@
 {
   "name": "@path-tree/react",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Provides components with a hierarchical structure.",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "README.md",
-    ""
+    "lib"
   ],
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development webpack-dev-server --config ./webpack.config.ts",
-    "build": "yarn build:tsc",
+    "build": "yarn clean && yarn build:tsc",
     "build:webpack": "NODE_ENV=development webpack --config ./webpack.config.ts",
-    "build:tsc": "tsc -p tsconfig.json"
+    "build:tsc": "tsc -p tsconfig.json",
+    "clean": "rimraf lib tsconfig.tsbuildinfo"
   },
   "peerDependencies": {
     "react": "^16.13.1",
@@ -63,6 +66,7 @@
     "react-svg-loader": "^3.0.3",
     "regenerator-runtime": "^0.13.5",
     "resolve-pkg": "^2.0.0",
+    "rimraf": "^3.0.2",
     "styled-components": "^5.1.1",
     "terser-webpack-plugin": "^3.0.6",
     "ts-jest": "^26.1.1",
