--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -78,5 +78,8 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
