--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,9 @@
     }
   },
   "useWorkspaces": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "npmClient": "yarn",
-  "packages": ["packages/*"]
+  "packages": [
+    "packages/*"
+  ]
 }
