--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -6,7 +6,8 @@
   "types": "lib/index.d.ts",
   "files": [
     "README.md",
-    "lib"
+    "lib",
+    "LICENSE"
   ],
   "license": "MIT",
   "scripts": {
