--- a/packages/collection/package.json
+++ b/packages/collection/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "main": "index.js",
   "types": "index.d.ts",
+  "keywords": ["tree", "hierarchical", "file", "path"],
   "description": "Provides a hierarchy of directories and files from a one-dimensional array of objects, including.",
   "license": "MIT",
   "files": [
