--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -9,6 +9,7 @@
     "lib",
     "LICENSE"
   ],
+  "keywords": ["tree", "hierarchical", "file", "path", "react", "components"],
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development webpack-dev-server --config ./webpack.config.ts",
